# Eoliann_Windows_Tools_2

./: .gitignore  FEATURE_PARITY.md  FIXES_2026_05_24.md  FIX_19_POINTS.md  LICENSE  MIGRATION.md  README.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  ewt_telegram.yml  release-notify.yml
installer/: ewt-installer.iss
scripts/: sync-version.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ActionCard.tsx  ActionGrid.tsx  ConfirmDialog.tsx  Header.tsx  LogPanel.tsx  RestorePointsPanel.tsx  Sidebar.tsx  StatCard.tsx  icons.tsx
src/data/: actions.ts
src/lib/: commands.ts
src/pages/: About.tsx  Apps.tsx  Customize.tsx  Dashboard.tsx  DiskHealth.tsx  Health.tsx  Info.tsx  Maintenance.tsx  Network.tsx  Performance.tsx  QuickKeys.tsx  Settings.tsx  Tweaks.tsx  WindowsApps.tsx
