[package]
name = "eoliann-windows-tools"
version = "1.0.0"
description = "Eoliann Windows Tools"
authors = ["eoliann"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "eoliann_windows_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
